--- a/src/Views/MonitoringView.xaml
+++ b/src/Views/MonitoringView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True"
+             prism:ViewModelLocator.AutoWireViewModel="False"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="500"
              Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
